tests/ui/with_args.stderr
error: this attribute does not take any arguments
 --> tests/ui/with_args.rs:1:22
  |
1 | #[angstropass::langs(no no no)]
  |                      ^^^^^^^^
