tests/ui/with_args.rs
#[angstropass::langs(no no no)]
mod foo {}

fn main() {}
